--- a/views/formulario.hbs
+++ b/views/formulario.hbs
@@ -15,4 +15,12 @@
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
 
   </form>
+
+
+  <div class="jumbotron text-center text-primary">
+    <h1><span class="fa fa-lock"></span> Social Authentication</h1>
+    <br>
+    <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Login con Facebook</a>
+  </div>
+
 </div>
