--- a/views/loggeado.hbs
+++ b/views/loggeado.hbs
@@ -1,6 +1,8 @@
 <div class= "mt-3">
   <form action="http://localhost:8080/logout" method="post">
     <h1 class="h3 mb-3 fw-normal">Welcome {{nombre}} !</h1>
+    <h2 class="h4 mb-3 fw-normal">Email: {{email}}</h2>
+    <h2 class="h4 mb-3 fw-normal">Foto: {{foto}}</h2>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Log Out</button>
   </form>
 </div>
